Update and rename Nur Asmi Fadilah Uprak.html to index.html

--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p>© 2025-2026 SMA Negeri 1 TARAKAN | Sistem Absensi Digital Kelas XII-K</p>
+            <p>Â© 2025-2026 SMA Negeri 1 TARAKAN | Sistem Absensi Digital Kelas XII-K</p>
             <p>Terakhir disimpan: <span id="lastSaved">Belum ada perubahan</span></p>
         </footer>
     </div>
@@ -1216,7 +1216,7 @@
                     </div>
                     <div class="activity-details">
                         <div class="activity-name">${student.name}</div>
-                        <div class="activity-time">${getStatusText(activity.status)} • ${timeString}</div>
+                        <div class="activity-time">${getStatusText(activity.status)} Â• ${timeString}</div>
                     </div>
                 `;
                 
